A lot of (performance) optimizations: * Fixed #552: Left navbar should stay expanded on product detail pages * Faster product list rendering: Optimized caching strategy & querying. Also switched to RouteValueDictionary from anonymous objects within partial views. * Switched to CachedDataAnnontitaionsModelMetadataProvider * Reordered view engine path lookup formats for faster view resolving on app startup * Removed product breadcrumb caching (we cache the menu structure already, that's sufficient) * Minor CSS fixes

--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -1,4 +1,5 @@
 ﻿@model CategoryModel
+
 @{
 	Layout = "~/Views/Shared/_ColumnsThree.cshtml";
 	//Layout = "~/Views/Shared/_ColumnsTwo.cshtml";
@@ -12,6 +13,7 @@
 		Html.AddCanonicalUrlParts(categoryUrl);
 	}
 }
+
 @using SmartStore.Core;
 @using SmartStore.Core.Domain.Common;
 @using SmartStore.Core.Domain.Seo;
@@ -30,7 +32,6 @@
 }
 
 <div class="page category-page">
-    @*category breadcrumb*@
     @if (Model.DisplayCategoryBreadcrumb) {
         <ul id="breadcrumb" class="breadcrumb">
             <li>
@@ -115,30 +116,30 @@
         @if (ShowListOptions()) {
             @Html.Partial("_ProductListOptions", Model.PagingFilteringContext)
 		}
-
+		
         @Html.Widget("categorydetails_before_product_list")
         @*product list*@
 		<div class="product-list-container">
 			@if (Model.Products.Count > 0) {
 	           if (Model.PagingFilteringContext.ViewMode == "list") {
-				        @*list mode*@
-				        <div class="product-list">
-					        @foreach (var product in Model.Products) {
-						        <article class="item-box details">
-							        @Html.Partial("_ProductBoxList", product)
-						        </article>   
-	                        }
-				        </div>       
+				    @*list mode*@
+				    <div class="product-list">
+					    @foreach (var product in Model.Products) {
+						    <article class="item-box details">
+							    @Html.Partial("_ProductBoxList", product)
+						    </article>   
+	                    }
+				    </div>       
 	           }
 	           else {
-				        @*grid mode*@
-				        <div class="product-grid">
-					        @(Html.DataList<ProductOverviewModel>(Model.Products, 3,
-						        @<article class="item-box">
-							        @Html.Partial("_ProductBox", @item)
-						        </article>
-					        ))
-				        </div>
+				    @*grid mode*@
+				    <div class="product-grid">
+					    @(Html.DataList<ProductOverviewModel>(Model.Products, 3,
+						    @<article class="item-box">
+							    @Html.Partial("_ProductBox", item)
+						    </article>
+					    ))
+				    </div>
 	           }
            }
 
