--- a/src/Presentation/SmartStore.Web/Views/Shared/_ProductBoxCompact.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ProductBoxCompact.cshtml
@@ -3,7 +3,7 @@
 @using SmartStore.Web.Models.Catalog;
 
 <figure class="picture" data-equalized-part="picture" data-equalized-valign="true">
-    <a href="@Url.RouteUrl("Product", new { SeName = Model.SeName })" title="@Model.DefaultPictureModel.Title">
+    <a href="@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })" title="@Model.DefaultPictureModel.Title">
         <img alt="@Model.DefaultPictureModel.AlternateText" src="@Model.DefaultPictureModel.ImageUrl" title="@Model.DefaultPictureModel.Title" /></a>
 </figure>
 <div class="data">
@@ -16,7 +16,7 @@
         }
     }
     <h3 class="name" data-equalized-part="name">
-        <a href="@Url.RouteUrl("Product", new { SeName = Model.SeName })" title="@nameTitle">
+        <a href="@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })" title="@nameTitle">
             @if (Model.IsNew)
             {
                 <span class="label label-isnew">@T("Common.New")</span>
