--- a/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
@@ -2,53 +2,55 @@
 @using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Catalog;
 @{
-    //prepare "Add to cart" AJAX link
+    // Perf: we use RouteValueDictionary instead of anonymous objects in this view because it's slightly faster
+	// prepare "Add to cart" AJAX link
     string addtocartlink = "";
     if (Model.ProductPrice.ForceRedirectionAfterAddingToCart)
 	{
-		addtocartlink = Url.Action("AddProductSimple", "ShoppingCart", new { productId = Model.Id, forceredirection = Model.ProductPrice.ForceRedirectionAfterAddingToCart });
+		addtocartlink = Url.Action("AddProductSimple", "ShoppingCart", new RouteValueDictionary { { "productId", Model.Id }, { "forceredirection", Model.ProductPrice.ForceRedirectionAfterAddingToCart } });
     }
     else
 	{
-		addtocartlink = Url.Action("AddProductSimple", "ShoppingCart", new { productId = Model.Id });
+		addtocartlink = Url.Action("AddProductSimple", "ShoppingCart", new RouteValueDictionary { { "productId", Model.Id } });
     }
 
-    bool showQuicklinks = !Model.ProductPrice.DisableWishListButton || Model.CompareEnabled;    
+    bool showQuicklinks = !Model.ProductPrice.DisableWishListButton || Model.CompareEnabled;
+	var productDetailLink = Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } });
 }
 
 @if (showQuicklinks)
 {
     <div class="quicklinks">        
         @if (!Model.ProductPrice.DisableWishListButton)
-        {
-            <a class="ajax-cart-link" 
-                data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
-                href="#"
-			    rel="nofollow"
-                data-form-selector="#product-details-form"
-                data-type="wishlist"
-                data-action="add">
-                <i class="fa fa-gift"></i>
-                @T("Categories.Wishlist")
-            </a>
-        }
+		{
+			<a class="ajax-cart-link"
+			   data-href='@Url.Action("AddProduct", "ShoppingCart", new RouteValueDictionary { { "productId", Model.Id }, { "shoppingCartTypeId", (int)ShoppingCartType.Wishlist } })'
+			   href="#"
+			   rel="nofollow"
+			   data-form-selector="#product-details-form"
+			   data-type="wishlist"
+			   data-action="add">
+				<i class="fa fa-gift"></i>
+				@T("Categories.Wishlist")
+			</a>
+		}
         @if (Model.CompareEnabled)
-        {
-            <a class="ajax-cart-link pull-right"
-                data-href="@Url.Action("AddProductToCompare", "Catalog", new { id = Model.Id })"
-                href="#"
-			    rel="nofollow"
-                data-type="compare"
-                data-action="add">
-                <i class="fa fa-retweet"></i>
-                @T("Categories.Compare")
-            </a>
-        }
+		{
+			<a class="ajax-cart-link pull-right"
+			   data-href="@Url.Action("AddProductToCompare", "Catalog", new RouteValueDictionary { { "id", Model.Id } })"
+			   href="#"
+			   rel="nofollow"
+			   data-type="compare"
+			   data-action="add">
+				<i class="fa fa-retweet"></i>
+				@T("Categories.Compare")
+			</a>
+		}
     </div>
 }
 
 <figure class="picture" data-equalized-part="picture" data-equalized-valign="true">
-    <a href="@Url.RouteUrl("Product", new { SeName = Model.SeName })" title="@Model.DefaultPictureModel.Title">
+    <a href="@productDetailLink" title="@Model.DefaultPictureModel.Title">
         <img alt="@Model.DefaultPictureModel.AlternateText" src="@Model.DefaultPictureModel.ImageUrl" title="@Model.DefaultPictureModel.Title" />
     </a>
     @if (Model.ColorAttributes.Any())
@@ -61,6 +63,7 @@
         </div>
     }
 </figure>
+
 <div class="data">
 
     @if (Model.ShowReviews) {
@@ -91,7 +94,7 @@
         }
     }
     <h3 class="name" data-equalized-part="name">
-        <a href="@Url.RouteUrl("Product", new { SeName = Model.SeName })" title="@nameTitle">
+        <a href="@productDetailLink" title="@nameTitle">
             @if (Model.IsNew)
             {
                 <span class="label label-isnew">@T("Common.New")</span>
@@ -179,13 +182,13 @@
             else
             {
                 <a class="btn btn-primary add-to-cart-button"
-                   href="@Url.Action("AskQuestion", "Product", new { id = Model.Id })"
+                   href="@Url.Action("AskQuestion", "Product", new RouteValueDictionary { { "id", Model.Id } })"
                    title="@T("Products.CallForPrice.GoToForm")">
                     <i class="fa fa-envelope"></i>
                 </a>
             }
         }
-        <a href='@Url.RouteUrl("Product", new { SeName = Model.SeName })' class="btn">
+        <a href='@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })' class="btn">
             <i class="fa fa-info-circle"></i>
             @T("Products.Details")
         </a>
