--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Print.cshtml
@@ -4,14 +4,9 @@
 @using SmartStore.Web.Models.Order;
 @using SmartStore.Services.Localization;
 @{
-    if (!Model.PrintMode)
-    {
-        Layout = "~/Views/Shared/_ColumnsOne.cshtml";
-    }
-    else
-    {
-        Layout = "~/Views/Shared/_Print.cshtml";
-    }
+
+    Layout = "~/Views/Shared/_Print2.cshtml";
+
     //title
     Html.AddTitleParts(T("PageTitle.OrderDetails").Text);
 }
@@ -26,14 +21,7 @@
 			</td>
 		}
 		<td>
-			@if (!Model.PrintMode)
-			{
-				<a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="View details">@item.ProductName</a>
-			}
-			else
-			{
-				@item.ProductName
-			}
+			@item.ProductName
 			@if (!String.IsNullOrEmpty(item.AttributeInfo))
 			{
 				<div class="attributes">
@@ -111,16 +99,16 @@
 	}
 }
 
-@if (Model.PrintMode)
+@*@if (Model.PrintMode)
 {
     <script type="text/javascript">
         $(document).ready(function () {
             window.print();
         });
     </script>
-}
-<div class="page order-details">
-    @if (!Model.PrintMode)
+}*@
+<div class="order-details">
+    @*@if (!Model.PrintMode)
     {
         <div class="clearfix">
             <div class="page-title pull-left">
@@ -137,16 +125,15 @@
                 @if (Model.DisplayPdfInvoice)
                 {
                     <a href="@Url.Action("pdf", new { id = Model.Id })" class="btn pdf-order-button" rel="nofollow">
-						<i class="fa fa-file-pdf-o"></i>
+						<i class="fa fa-arrow-circle-o-down"></i>
                         @T("Order.GetPDFInvoice")
                     </a>
                 }
             </div>
         </div>
-    }
+    }*@
 
     <div class="page-body">
-        @Html.Widget("orderdetails_page_top")
         <dl class="dl-horizontal">
             <dt>@T("Order.Order#"):</dt>
             <dd>@Model.OrderNumber</dd>
@@ -160,10 +147,9 @@
             <dt>@T("Order.OrderTotal"):</dt>
             <dd class="text-success"><strong>@Model.OrderTotal</strong></dd>
         </dl>
-        @Html.Widget("orderdetails_page_overview")
 
         <div class="order-details-box well">
-            <table class="order-details-table">
+            <table class="order-details-table" cellpadding="20" cellspacing="20" style="margin-top:300px;">
                 <tbody>
                     <tr>
                         <td class="billinginfo">
@@ -256,18 +242,6 @@
                                         @Model.PaymentMethod
                                     </div>
                                 </p>
-								@*Completing payment support (for redirection payment methods)*@
-								if (!Model.PrintMode && Model.CanRePostProcessPayment)
-								{
-									<div class="repost">
-										<p></p>
-									@using (Html.BeginForm())
-									{
-										<input type="submit" name="repost-payment" value="@T("Order.CompletePayment")" class="btn btn-primary re-order-button btn-above" />
-										<div class="hint muted">@T("Order.CompletePayment.Hint")</div>
-									}
-									</div>
-								}
 							}
                             @if (Model.DisplayPurchaseOrderNumber)
                             {
@@ -368,7 +342,6 @@
             </table>
         </div>
 
-        @Html.Widget("orderdetails_page_beforeproducts")
         @if (Model.Items.Count > 0)
         {
             <div class="section-title">
@@ -376,7 +349,7 @@
             </div>
 
             <div class="products-box">
-                <table class="table table-order-items table-order-products">
+                <table class="table table-order-items table-order-products" style="border: 1px solid red; width: 100%">
                     <thead>
                         <tr>
                             @if (Model.ShowSku)
@@ -425,32 +398,9 @@
                         @Html.Raw(Model.CheckoutAttributeInfo)
                     </div>
                 }
-
-                @if (!Model.PrintMode)
-                {
-                    <div class="actions clearfix">
-						<div class="pull-right">
-							@if (Model.IsReturnRequestAllowed)
-							{
-								<a class="btn return-items-button" href="@Url.RouteUrl("ReturnRequest", new { orderId = Model.Id })">
-									<i class="fa fa-reply"></i>
-									@T("Order.ReturnItems")
-								</a>
-							}
-
-							@if (Model.IsReOrderAllowed)
-							{
-								<a class="btn btn-primary re-order-button" href="@Url.Action("ReOrder", new { id = Model.Id })">
-									<i class="fa fa-shopping-cart"></i>
-									@T("Order.Reorder")
-								</a>
-							}
-						</div>
-                    </div>
-                }
             </div>
         }
-        @Html.Widget("orderdetails_page_afterproducts")
+
         <div class="row-fluid">
             <div class="total-info span8 offset16">
                 <table class="cart-total table">
@@ -597,116 +547,5 @@
                 </table>
             </div>
         </div>
-
-		@Html.Widget("orderdetails_page_aftertotal")
-
-        @if (!Model.PrintMode)
-        {
-            if (Model.Shipments.Count > 0)
-            {
-            <div class="section-title">
-                @T("Order.Shipments")
-            </div>
-
-            <div class="shipments-box">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                @T("Order.Shipments.ID")
-                            </th>
-                            <th>
-                                @T("Order.Shipments.TrackingNumber")
-                            </th>
-                            <th>
-                                @T("Order.Shipments.ShippedDate")
-                            </th>
-                            <th>
-                                @T("Order.Shipments.DeliveryDate")
-                            </th>
-                            <th>
-                                @T("Order.Shipments.ViewDetails")
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Shipments)
-                        {
-                            <tr>
-                                <td>
-                                    @item.Id.ToString()
-                                </td>
-                                <td>
-                                    @item.TrackingNumber
-                                </td>
-                                <td>
-                                    @if (item.ShippedDate.HasValue)
-                                    {
-                                        @item.ShippedDate.Value.ToString("D")
-                                    }
-                                    else
-                                    {
-                                        @T("Order.Shipments.ShippedDate.NotYet")
-                                    }
-                                </td>
-                                <td>
-                                    @if (item.DeliveryDate.HasValue)
-                                    {
-                                        @item.DeliveryDate.Value.ToString("D")
-                                    }
-                                    else
-                                    {
-                                        @T("Order.Shipments.DeliveryDate.NotYet")
-                                    }
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("ShipmentDetails", new { id = item.Id })" title="@T("Order.Shipments.ViewDetails")">@T("Order.Shipments.ViewDetails")</a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            }
-        }
-
-        @if (!Model.PrintMode)
-        {
-            if (Model.OrderNotes.Count > 0)
-            {
-            <div class="section-title">
-                @T("Order.Notes")
-            </div>
-
-            <div class="ordernotes-box">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                @T("Order.Notes.CreatedOn")
-                            </th>
-                            <th>
-                                @T("Order.Notes.Note")
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.OrderNotes)
-                        {
-                            <tr>
-                                <td>
-                                    @item.CreatedOn.ToString()
-                                </td>
-                                <td>
-                                    @Html.Raw(item.Note)
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            }
-        }
-        @Html.Widget("orderdetails_page_bottom")
 	</div>
 </div>
