Updated license info

--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -340,10 +340,10 @@
 			</li>
 			<li>
 				<div class="name">
-					<a href="http://tinymce.moxiecode.com/" rel="nofollow" target="AboutTargetWin">TinyMCE</a>
+					<a href="http://ckeditor.com/" rel="nofollow" target="AboutTargetWin">CKEditor</a>
 				</div>
 				<div class="copyright">
-					Copyright &copy; 2003-2009 Moxiecode Systems AB
+					&copy 2014 CKSource - Frederico Knabben
 				</div>
 				<div class="license">
 					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License" rel="nofollow" target="AboutTargetWin">LGPL 2.1</a>
@@ -357,7 +357,7 @@
 					
 				</div>
 				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
+					<span>@(license):</span> <a href="http://www.gnu.org/licenses/gpl.html" rel="nofollow" target="AboutTargetWin">GPL 3.0</a>
 				</div>
 			</li>
 			<li>
