Confirm order: new client scripting event 'submitOrder' to cancel submitting the order

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
@@ -89,8 +89,17 @@
                                         }
                                     </text>
                                 }
-                                if (termOfServiceOk) {
-                                    $('#confirm-order-form').submit();
+								
+                            	if (termOfServiceOk) {
+                            		var submitOrderEvent = jQuery.Event('submitOrder');
+                            		submitOrderEvent.isOrderValid = true;
+                            		submitOrderEvent.isMobile = true;
+
+                            		$(this).trigger(submitOrderEvent);
+
+                            		if (true === submitOrderEvent.isOrderValid) {
+                            			$('#confirm-order-form').submit();
+                            		}
                                 }
                             });
                         });
