--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -7,7 +7,8 @@
 <div class="section-header">
     <div class="title">
 		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
-        @ViewBag.Title <a href="@ViewBag.ListUrl">(@T("Admin.Common.BackToList"))</a>
+        @ViewBag.Title <span class="muted">(@(Model.SystemName))</span>
+		<a href="@ViewBag.ListUrl">(@T("Admin.Common.BackToList"))</a>
     </div>
 	@if (Model.PluginDescriptor != null)
 	{
