--- a/src/Presentation/SmartStore.Web/Views/Shared/_Print2.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Print2.cshtml
@@ -10,15 +10,17 @@
 	<title>@Html.SmartTitle(true)</title>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	
+	<link rel="stylesheet" type="text/css" href="~/Content/print.css" />
+
 	<style type="text/css">
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            /*font-family: Arial, Helvetica, sans-serif;
             font-size: 14px;
             line-height: 20px;
             color: #444;
 			margin: 0;
 			padding: 20px 0;
-			border: 0;
+			border: 0;*/
         }
 	</style>
 
