--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Categories.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Categories.cshtml
@@ -9,7 +9,11 @@
         <script>
 			function onProductCategoryEdit(e) {
                 $(e.form).find('#Category').select2('val', e.dataItem['CategoryId']);
-            }
+			}
+
+			function onProductCategoryDataBound(e) {
+				$('#Category').selectWrapper({ resetDataUrl: '@Url.Action("AllCategories", "Category")' });
+			}
         </script>
 		
 		@(Html.Telerik().Grid<ProductModel.ProductCategoryModel>()
@@ -45,7 +49,10 @@
                 .Width(180);
             })
             .ToolBar(commands => commands.Insert())
-            .ClientEvents(events => events.OnEdit("onProductCategoryEdit"))
+            .ClientEvents(events => {
+				events.OnEdit("onProductCategoryEdit");
+				events.OnDataBound("onProductCategoryDataBound");
+			})
             .EnableCustomBinding(true))
     }
     else
